<resources>
    <string name="app_name">Handy</string>
    <string name="press_this_button">Press this button</string>
    <string name="text_view">Text View</string>
    <string name="edit_text">Edit Text</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign up</string>
    <string name="a">A</string>
    <string name="al_hasan_a_al_khatib">Al-Hasan A. Al-Khatib</string>
    <string name="follow">Follow</string>
    <string name="this_is_my_profile_follow_now">This is my profile, follow now!</string>
    <string name="following">following</string>
    <string name="al_hasan">Al-Hasan</string>
    <string name="i_m_a_cat">I\'m a cat</string>
    <string name="meaw_meaw_meaw_meaw_meaw_meaw_meaw_meaw_meaw_meaw_meaw_meaw_meaw_meaw_meaw_meaw_meaw_meaw_meaw_meaw_meaw_meaw_meaw_meaw_meaw_meaw_meaw_meaw_meaw_meaw_meaw_meaw_meaw_meaw_meaw_meaw_meaw_meaw_meaw_meaw_meaw_meaw_meaw_meaw_meaw_meaw_meaw_meaw_meaw_meaw_meaw_meaw_meaw_meaw_meaw_meaw_meaw_meaw_meaw_meaw_meaw_meaw_meaw_meaw_meaw_meaw_meaw_meaw_meaw_meaw_meaw_meaw_meaw_meaw_meaw_meaw_meaw_meaw_meaw_meaw_meaw_meaw_meaw_meaw_meaw_meaw_meaw_meaw_meaw_meaw_meaw_meaw_meaw_meaw_meaw_meaw_meaw_meaw_meaw_meaw_meaw_meaw_meaw_meaw_meaw_meaw_meaw_meaw_meaw_meaw_meaw_meaw_meaw_meaw_meaw_meaw_meaw_meaw_meaw_meaw_meaw_meaw_meaw_meaw_meaw_meaw_meaw_meaw_meaw_meaw_meaw_meaw_meaw_meaw_meaw_meaw_meaw_meaw_meaw_meaw_meaw_meaw_meaw_meaw_meaw_meaw_meaw_meaw_meaw_meaw_meaw_meaw_meaw_meaw_meaw_meaw_meaw_meaw_meaw_meaw_meaw_meaw_meaw_meaw_meaw_meaw_meaw_meaw_meaw_meaw_meaw_meaw_meaw_meaw_meaw_meaw_meaw_meaw_meaw_meaw_meaw_meaw_meaw_meaw_meaw_meaw_meaw_meaw_meaw_meaw_meaw_meaw_meaw_meaw_meaw_meaw_meaw_meaw_meaw_meaw_meaw_meaw_meaw_meaw_meaw_meaw_meaw_meaw_meaw_meaw_meaw_meaw_meaw_meaw_meaw_meaw_meaw_meaw_meaw_meaw_meaw_meaw_meaw_meaw_meaw_meaw_meaw_meaw_meaw_meaw_meaw_meaw_meaw_meaw_meaw_meaw_meaw_meaw_meaw_meaw_meaw_meaw_meaw_meaw_meaw_meaw_meaw_meaw_meaw_meaw_meaw_meaw_meaw_meaw_meaw_meaw_meaw_meaw_meaw_meaw">meaw meaw meaw meaw meaw meaw meaw meaw meaw meaw meaw meaw meaw meaw meaw meaw meaw meaw meaw meaw meaw meaw meaw meaw meaw meaw meaw meaw meaw meaw meaw meaw meaw meaw meaw meaw meaw meaw meaw meaw meaw meaw meaw meaw meaw meaw meaw meaw meaw meaw meaw meaw meaw meaw meaw meaw meaw meaw meaw meaw meaw meaw meaw meaw meaw meaw meaw meaw meaw meaw meaw meaw meaw meaw meaw meaw meaw meaw meaw meaw meaw meaw meaw meaw meaw meaw meaw meaw meaw meaw meaw meaw meaw meaw meaw meaw meaw meaw meaw meaw meaw meaw meaw meaw meaw meaw meaw meaw meaw meaw meaw meaw meaw meaw meaw meaw meaw meaw meaw meaw meaw meaw meaw meaw meaw meaw meaw meaw meaw meaw meaw meaw meaw meaw meaw meaw meaw meaw meaw meaw meaw meaw meaw meaw meaw meaw meaw meaw meaw meaw meaw meaw meaw meaw meaw meaw meaw meaw meaw meaw meaw meaw meaw meaw meaw meaw meaw meaw meaw meaw meaw meaw meaw meaw meaw meaw meaw meaw meaw meaw meaw meaw meaw meaw meaw meaw meaw meaw meaw meaw meaw meaw meaw meaw meaw meaw meaw meaw meaw meaw meaw meaw meaw meaw meaw meaw meaw meaw meaw meaw meaw meaw meaw meaw meaw meaw meaw meaw meaw meaw meaw meaw meaw meaw meaw meaw meaw meaw meaw meaw meaw meaw meaw meaw meaw meaw meaw meaw meaw meaw meaw meaw meaw meaw meaw meaw meaw meaw meaw meaw meaw meaw meaw meaw meaw meaw meaw meaw meaw</string>
    <string name="date">19, Nivember</string>
    <string name="todo">todo</string>
    <string name="hello">hello</string>
    <string name="button">button</string>
</resources>
