<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/img"
        android:layout_width="100dp"
        android:layout_height="80dp"
        app:srcCompat="@drawable/android"
        android:contentDescription="@string/todo"
        tools:ignore="VectorDrawableCompat"
        android:background="#E91E63"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_toEndOf="@id/img"
        android:layout_marginHorizontal="2dp"
        android:id="@+id/lin"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="2dp"
            android:background="#9C27B0"
            android:text="@string/hello"
            android:textColor="#fff"
            android:textSize="22sp"
            android:gravity="center"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button"
            android:background="#9C27B0"
            android:textColor="#fff"
            />
    </LinearLayout>
    <Button
        android:id="@+id/btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/lin"
        android:layout_alignBottom="@id/lin"
        android:layout_alignTop="@id/lin"
        android:text="@string/button"
        android:background="#4CAF50"
        android:textColor="#fff"
        />
    <Button
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_toEndOf="@id/btn"
    android:layout_alignBottom="@id/btn"
    android:layout_alignTop="@id/lin"
    android:text="@string/button"
    android:background="#FF9800"
    android:textColor="#fff"
        android:layout_alignParentEnd="true"
    />
    <Button
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/button"
    android:background="#8D65CC"
    android:textColor="#fff"
    android:layout_alignParentBottom="true"
    android:layout_alignParentEnd="true"
    android:layout_alignParentStart="true"
    android:layout_below="@id/lin"
    />
</RelativeLayout>